[tool.poetry]
name = "sayn"
version = "0.5.12"
description = "Data-modelling and processing framework for automating Python and SQL tasks"
authors = ["Robin Watteaux <robin@173tech.com>", "Adrian Macias <adrian@173tech.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/173TECH/sayn"
homepage = "https://173tech.github.io/sayn"

include = ["CHANGELOG.md", "NOTICE.md", "mkdocs.yml", "docs/*", "docs/**/*"]

[tool.poetry.dependencies]
python = ">= 3.6.1, < 3.11"
Click = "^8.0"
jinja2 = "^2.10.3"
sqlalchemy = "^1.3.12"
pydantic = "^1.8"
colorama = "^0.4.3"
halo = "^0.0.30"
"ruamel.yaml" = "^0.16.12"

graphviz = { version = "^0.14", optional = true }

# DB drivers (optional)
psycopg2 = { version = "^2.8.5", optional = true }
snowflake-connector-python = { version = "^2.0.3", optional = true }
snowflake-sqlalchemy = { version = "^1.1.18", optional = true }
pymysql = { version = "^0.9.3", optional = true }
pybigquery = { version = "^0.7.0", optional = true, python = ">= 3.6.1, < 3.10"}
google-cloud-bigquery-storage = { version = "^2.1.0", optional = true }
pyarrow = { version = "^2.0.0", optional = true }

[tool.poetry.extras]
all = ["graphviz", "psycopg2", "snowflake-connector-python", "snowflake-sqlalchemy", "pymysql"]
graphviz = ["graphviz"]
postgresql = ["psycopg2"]
snowflake = ["snowflake-connector-python", "snowflake-sqlalchemy"]
mysql = ["pymysql"]
bigquery = ["pybigquery", "google-cloud-bigquery-storage", "pyarrow"]

[tool.poetry.scripts]
sayn = "sayn.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.3"
black = "20.8b1"
flake8 = "^3.8.3"
mkdocs = "^1.1.2"
mkdocs-material = "^6.0.2"
mkdocstrings = "^0.13.6"
livereload = "^2.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
