[tool.poetry]
name = "sayn"
version = "0.6.1"
description = "Data-modelling and processing framework for automating Python and SQL tasks"
authors = ["Robin Watteaux <robin@173tech.com>", "Adrian Macias <adrian@173tech.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/173TECH/sayn"
homepage = "https://173tech.github.io/sayn"

include = ["CHANGELOG.md", "NOTICE.md", "mkdocs.yml", "docs/*", "docs/**/*"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"

# Core
Jinja2 = "3.0.3"
MarkupSafe = "2.1.0"

SQLAlchemy = "1.4.25"

pydantic = "1.9.0"
typing_extensions = "4.1.1"

"ruamel.yaml" = "0.17.21"
"ruamel.yaml.clib" = "0.2.6"

# CLI
Click = "8.0.4"

halo = "0.0.31"
colorama = "0.4.4"
log-symbols = "0.0.14"
six = "1.16.0"
spinners = "0.0.24"
termcolor = "1.1.0"

terminaltables = "3.1.10"

# DB drivers (optional)
# Postgresql and Redshift
psycopg2 = { version = "2.9.3", optional = true }

# MySQL
PyMySQL = { version = "1.0.2", optional = true }

# Snowflake
snowflake-connector-python = { version = "2.7.4", optional = true }
snowflake-sqlalchemy = { version = "1.3.3", optional = true }
asn1crypto = { version = "1.4.0", optional = true }
cffi = { version = "1.15.0", optional = true }
cryptography = { version = "36.0.1", optional = true }
oscrypto = { version = "1.2.1", optional = true }
pycparser = { version = "2.21", optional = true }
pycryptodomex = { version = "3.14.1", optional = true }
PyJWT = { version = "2.3.0", optional = true }
pyOpenSSL = { version = "21.0.0", optional = true }
pytz = { version = "2021.3", optional = true }

# BigQuery
sqlalchemy-bigquery = { version = "1.3.0", optional = true }
cachetools = { version = "5.0.0", optional = true }
future = { version = "0.18.2", optional = true }
google-api-core = { version = "2.5.0", optional = true }
google-auth = { version = "2.6.0", optional = true }
google-cloud-bigquery = { version = "2.34.0", optional = true }
google-cloud-core = { version = "2.2.2", optional = true }
google-crc32c = { version = "1.3.0", optional = true }
google-resumable-media = { version = "2.2.1", optional = true }
googleapis-common-protos = { version = "1.54.0", optional = true }
grpcio = { version = "1.44.0", optional = true }
grpcio-status = { version = "1.44.0", optional = true }
packaging = { version = "21.3", optional = true }
proto-plus = { version = "1.20.3", optional = true }
protobuf = { version = "3.19.4", optional = true }
pyasn1 = { version = "0.4.8", optional = true }
pyasn1-modules = { version = "0.2.8", optional = true }
pyparsing = { version = "3.0.7", optional = true }
python-dateutil = { version = "2.8.2", optional = true }
rsa = { version = "4.8", optional = true }

# BigQuery dependencies for the storage client
google-cloud-bigquery-storage = { version = "2.11.0", optional = true }
libcst = { version = "0.4.1", optional = true }
mypy-extensions = { version = "0.4.3", optional = true }
typing-inspect = { version = "0.7.1", optional = true }

# Shared by BigQuery and Snowflake
charset-normalizer = { version = "2.0.12", optional = true }
certifi = { version = "2021.10.8", optional = true }
idna = { version = "3.3", optional = true }
requests = { version = "2.27.1", optional = true }
urllib3 = { version = "1.26.8", optional = true }
numpy = { version = "1.21.4", optional = true }
pyarrow = { version = "6.0.0", optional = true }

# DAG visualisation
graphviz = { version = "0.19.1", optional = true }

[tool.poetry.extras]
all = ["graphviz", "psycopg2", "snowflake-connector-python", "snowflake-sqlalchemy", "pymysql"]
postgresql = ["psycopg2"]
mysql = ["pymysql"]
snowflake = ["snowflake-connector-python", "snowflake-sqlalchemy", "asn1crypto", "cffi", "cryptography",
             "oscrypto", "pycparser", "pycryptodomex", "PyJWT", "pyOpenSSL", "pytz", "charset-normalizer",
             "certifi", "idna", "requests", "urllib3", "numpy", "pyarrow"]
bigquery = ["sqlalchemy-bigquery", "cachetools", "future", "google-api-core", "google-auth", "google-cloud-bigquery",
            "google-cloud-core", "google-crc32c", "google-resumable-media", "googleapis-common-protos", "grpcio",
            "grpcio-status", "packaging", "proto-plus", "protobuf", "pyasn1", "pyasn1-modules", "pyparsing", "python-dateutil",
            "rsa", "google-cloud-bigquery-storage", "libcst", "mypy-extensions", "typing-inspect", "charset-normalizer",
            "certifi", "idna", "requests", "urllib3", "numpy", "pyarrow"]
graphviz = ["graphviz"]

[tool.poetry.scripts]
sayn = "sayn.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.3"
black = "20.8b1"
flake8 = "^3.8.3"
mkdocs = "^1.1.2"
mkdocs-material = "^6.0.2"
mkdocstrings = "^0.13.6"
livereload = "^2.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
