[tool.poetry]
name = "sayn"
version = "0.6.7"
description = "Data-modelling and processing framework for automating Python and SQL tasks"
authors = ["Robin Watteaux <robin@173tech.com>", "Adrian Macias <adrian@173tech.com>"]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/173TECH/sayn"
homepage = "https://173tech.github.io/sayn"

include = ["CHANGELOG.md", "NOTICE.md", "mkdocs.yml", "docs/*", "docs/**/*"]

[tool.poetry.dependencies]
python = ">= 3.8.1, <= 4.0"

# Core
Jinja2 = ">=3.0.3"

SQLAlchemy = ">=1.4.25,<2.0.0"

pydantic = ">=1.9.0,<1.10.0"

"ruamel.yaml" = "0.17.21"
"ruamel.yaml.clib" = "0.2.7"
orjson = ">=3.7.7"

# CLI
Click = "8.0.4"

halo = "0.0.31"
colorama = ">=0.4.4"

# DB drivers (optional)
# Postgresql
psycopg2 = { version = ">=2.9.3", optional = true }

# MySQL
PyMySQL = { version = ">=1.0.2", optional = true }

# Snowflake
snowflake-sqlalchemy = { version = ">=1.4.4", optional = true }

# BigQuery
# BigQuery doesn't work with 3.11 at the moment: https://github.com/googleapis/python-bigquery-sqlalchemy/issues/500
sqlalchemy-bigquery = { version = ">=1.6.0", python = ">=3.8.1,<3.12", optional = true }

# BigQuery dependencies for the storage client
google-cloud-bigquery-storage = { version = ">=2.0.0,<3.0.0dev", optional = true }

# Redshift
redshift-connector = "^2.0.910"
sqlalchemy-redshift = "^0.8.12"

# DAG visualisation
graphviz = { version = ">=0.19.1", optional = true }

[tool.poetry.extras]
all = ["graphviz", "psycopg2", "pymysql", "snowflake-sqlalchemy", "sqlalchemy-bigquery", "graphviz"]
postgresql = ["psycopg2"]
redshift = ["redshift-connector", "sqlalchemy-redshift"]
mysql = ["pymysql"]
snowflake = ["snowflake-sqlalchemy"]
bigquery = ["sqlalchemy-bigquery", "google-cloud-bigquery-storage"]
graphviz = ["graphviz"]

[tool.poetry.scripts]
sayn = "sayn.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
black = "22.12.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocstrings = "^0.19.1"
livereload = "^2.6.3"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
